Working prototype with modification, querying and all connections specified on the readme
